GNOME Bugzilla – Bug 687421
GstRTSPConnection: a number of methods not annotated correctly
Last modified: 2012-11-02 13:05:26 UTC
Created attachment 227879 [details] [review] Fix GI annotations These include: gst_rtsp_connection_create() gst_rtsp_connection_accept() gst_rtsp_watch_unref() gst_rtsp_watch_send_message()
commit ff04a1b4c6cac6903998185f8de4d267899d5d3b Author: Ognyan Tonchev <ognyan@axis.com> Date: Fri Nov 2 11:05:20 2012 +0100 rtspconnection: fix g-i annotations for out parameters https://bugzilla.gnome.org/show_bug.cgi?id=687421