rtspconnection: fix g-i annotations for out parameters

https://bugzilla.gnome.org/show_bug.cgi?id=687421